[gd_scene load_steps=5 format=3 uid="uid://bxnvmr0gior28"]

[ext_resource type="Script" uid="uid://dxo0gannxry5" path="res://splashscreen.gd" id="1_tg4cr"]
[ext_resource type="Texture2D" uid="uid://bep26dns4tcbl" path="res://Assets/logo/unpgrikediri_cover.jpg" id="2_37rai"]
[ext_resource type="Texture2D" uid="uid://b345h085whhq5" path="res://Assets/logo/images.jpg" id="3_37rai"]
[ext_resource type="Texture2D" uid="uid://cbp4okfdwrxq0" path="res://Assets/game/characters/Cow2.png" id="4_0qrqu"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_tg4cr")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -168.0
offset_top = -31.0
offset_right = 896.0
offset_bottom = 429.0
texture = ExtResource("2_37rai")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = 99.0
offset_top = 69.0
offset_right = 148.0
offset_bottom = 118.0
text = "mekdi
"

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_37rai")
metadata/_edit_lock_ = true

[node name="TextureRect3" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_0qrqu")
metadata/_edit_lock_ = true

[node name="PressAnyKeyLabel" type="Label" parent="."]
offset_left = 78.0
offset_top = 55.0
offset_right = 117.0
offset_bottom = 78.0

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
